# ejc-2023

./: .gitignore  README.md  compare_two_big_files.py  pyproject.toml  transformation_xlxs.py  validate_xlsx_file.py
