[tool.poetry]
name = "ejc-2023"
version = "0.1.0"
description = ""
authors = ["Tiago Assuncao <tiagoribeirodeassuncao@gmail.com>"]
readme = "README.md"
packages = [{include = "ejc_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
